[package]
name = "has_colors"
description = "Detects if the current environment supports colored output."
version = "0.1.0"
authors = ["Connor Love <connor@dotconnor.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/dotconnor/has_colors"

[dependencies]
regex = "1.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
